<!--
  ~ This file is part of Flash Aid.
  ~ Copyright (C) 2014 Siddharth Duddikunta, Steven Zhang, William Yang, Zain Rehmani
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/keyline">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/what_is_emergency_label"
            android:textSize="@dimen/header_text_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_minus_8dp"
            android:text="@string/emergency_text"
            android:textSize="@dimen/primary_text_size" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline"
            android:checkedButton="@+id/radio_general"
            android:orientation="vertical">

            <RadioButton
                android:id="@id/radio_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_type_general"
                android:textSize="@dimen/primary_text_size" />

            <RadioButton
                android:id="@+id/radio_cpr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_type_cpr"
                android:textSize="@dimen/primary_text_size" />

            <RadioButton
                android:id="@+id/radio_epi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_type_epipen"
                android:textSize="@dimen/primary_text_size" />
        </RadioGroup>

        <Button
            android:id="@+id/send_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/keyline"
            android:background="?attr/colorPrimary"
            android:text="@string/send_call"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline"
            android:text="@string/time_left"
            android:textSize="@dimen/primary_text_size" />

    </LinearLayout>

</LinearLayout>